<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example.sec</groupId>
  <artifactId>sec-filings</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>ingestion-service</module>
    <module>parser-service</module>
    <module>chunker-service</module>
    <module>embedding-service</module>
    <module>retrieval-service</module>
    <module>qa-service</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <spring.boot.version>3.2.5</spring.boot.version>
    <spring-cloud.version>2023.0.1</spring-cloud.version>
    <elasticsearch.client.version>7.17.9</elasticsearch.client.version>
    <tika.version>2.9.1</tika.version>
    <opennlp.version>2.2.0</opennlp.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
